# task-management-system

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: playwright.yml
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_tasks_table.py  62343b527934_description_of_changes.py
backend/app/: __init__.py  factory.py  main.py
backend/app/api/: health.py  routes.py
backend/app/controllers/: __init__.py  sse.py  task.py  test.py
backend/app/core/: config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  lifespan.py  logging.py  middleware.py  validation.py
backend/app/models/: __init__.py  task.py
backend/app/repositories/: __init__.py  base.py  task.py
backend/app/schemas/: __init__.py  common.py  sse.py  task.py
backend/app/services/: __init__.py  base.py  sse.py  task.py
frontend/: .gitignore  Dockerfile  README.md  components.json  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: ConfirmDialog.vue  Pagination.vue  index.ts
frontend/src/components/layout/: AppLayout.vue
frontend/src/components/ui/: Modal.vue
frontend/src/components/ui/alert-dialog/: AlertDialogAction.vue  AlertDialogCancel.vue  AlertDialogContent.vue  (+4 more)
frontend/src/composables/: index.ts  useApi.ts  useFormValidation.ts  useSSE.ts
frontend/src/plugins/: index.ts
frontend/tests/: task.spec.ts
(+92 files in other folders)
